[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4"] }
argon2 = { version = "0.3", package = "rust-argon2" }
jsonwebtoken = "9.3"
dotenvy = "0.15" # pro načtení .env
tower = "0.4"
